--- a/src/components/Head.html
+++ b/src/components/Head.html
@@ -11,7 +11,7 @@
 <meta name="theme-color" content="#ffffff">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="ru_RU">
-<meta property="og:site_name" content="Александр Таймасов">
+<meta property="og:site_name" content="Alexander Taimasov">
 <meta property="og:title" content="{=$title}">
 <meta property="og:description" content="{=$description}">
 <meta property="og:url" content="{=$ogURL}">
