fix styles, add new function

--- a/src/components/TheFooter.html
+++ b/src/components/TheFooter.html
@@ -1,9 +1,3 @@
-<div class="footer-container">
-    <div class="footer-copyright">
-        <a href="https://github.com/ATaimasov" target="_blank" class="link footer-copyright__link">
-            <div class ="logo footer-copyright__logo copyright-logo">
-                <load src="src/assets/icons/copyrights.svg"/>
-            </div>
-        </a>
-    </div>
-</div>
+<load src="src/components/_copyrights.html" 
+class="footer"
+/>
