--- a/src/components/TheHeader.html
+++ b/src/components/TheHeader.html
@@ -1,9 +1,3 @@
-<nav class="nav header__nav" id="header-nav">
-    <div class="header-copyright">
-        <a href="https://github.com/ATaimasov" target="_blank" class="link header-copyright__link">
-            <div class ="logo header-copyright__logo copyright-logo">
-                <load src="src/assets/icons/copyrights.svg"/>
-            </div>
-        </a>
-    </div>
-</nav>
+<load src="src/components/_nav.html"
+class="header" 
+/>
