--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,12 @@
 @use 'normalize.css'; //reset styles
 
 // base
+// @use '@base/fonts';
 @use '@base/base';
+@use '@base/reset';
 
 // components
 @use '@scss-components/TheHeader';
 @use '@scss-components/TheMain';
 @use '@scss-components/TheFooter';
+@use '@scss-components/copyrights';
