--- a/src/components/TheMain.html
+++ b/src/components/TheMain.html
@@ -1,3 +1,3 @@
-<img src="src/assets/images/example-img.png" alt="">
-<img src="src/assets/images/example-img.png" alt="">
-<img src="src/assets/images/example-img.png" alt="">
+<img src="src/assets/images/example-img.png" alt="" class="img">
+<img src="src/assets/images/example-img.png" alt="" class="img">
+<img src="src/assets/images/example-img.png" alt="" class="img">
