--- a/src/styles/abstracts/functions/_strip-unit-function.scss
+++ b/src/styles/abstracts/functions/_strip-unit-function.scss
@@ -1,10 +1,12 @@
 @use "sass:math";
 
 // Removes units from values. This allows us to perform mathematical operations on numbers without units.
-@function strip-unit($value) {
-    @return math.div($value, $value * 0 + 1);
-}
-
+@function strip-unit($number) {
+    @if type-of($number) == 'number' and not unitless($number) {
+      @return math.div($number, ($number * 0 + 1));
+    }
+    @return $number;
+  }
 
 
 
