--- a/src/styles/abstracts/functions/functions.scss
+++ b/src/styles/abstracts/functions/functions.scss
@@ -1,4 +1,5 @@
 @forward 'rem-functions';
 @forward 'percents-functions';
+@forward 'average-value-function';
 // @forward 'strip-unit-function';
 // @forward 'is-list-function';
