improve file structure, add new functions

--- a/src/styles/abstracts/functions/functions.scss
+++ b/src/styles/abstracts/functions/functions.scss
@@ -1,5 +1,6 @@
-@forward 'rem-functions';
-@forward 'percents-functions';
-@forward 'average-value-function';
-// @forward 'strip-unit-function';
-// @forward 'is-list-function';
+@forward 'values/px-to-rem';
+@forward 'values/average-value';
+@forward 'values/px-to-percents';
+
+@forward 'colors/hex-to-rgb';
+@forward 'colors/hex-to-rgba';
