--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -240,7 +240,7 @@ html {
 //}
 
 
-// need alternatives if you want to use it
+// need alternatives if you want to disable outline on focus
 // :focus,
 // a:active,
 // a:hover {
