--- a/src/styles/abstracts/mixins/adaptive/_mf-mtd-breakpoints-mixins.scss
+++ b/src/styles/abstracts/mixins/adaptive/_mf-mtd-breakpoints-mixins.scss
@@ -1,5 +1,5 @@
 @use '@abstracts/variables/variables' as shared;
-@use '@abstracts/functions/is-list-function' as *;
+@use '@scss-functions/utils/convert-to-list' as *;
 
 // mobile-tablet-desktop (mtd) -  mobile first methodology breakpoints
 // example: @include mtd(font-size, 50%, 70%, 100%);
@@ -8,20 +8,20 @@
 
     // Apply basic styles (mobile)
     @if $min != null {
-      #{$property}: process-values($min);
+      #{$property}: convert-to-list($min);
     }
   
     // Applying styles for the tablet
     @if $medium != null {
       @media screen and (min-width: shared.$screen-md) {
-        #{$property}: process-values($medium);
+        #{$property}: convert-to-list($medium);
       }
     }
   
     // Apply desktop styles
     @if $max != null {
       @media screen and (min-width: shared.$screen-xl) {
-        #{$property}: process-values($max);
+        #{$property}: convert-to-list($max);
       }
     }
   }
@@ -32,20 +32,20 @@
    
     // Apply basic styles (mobile)
     @if $min != null {
-      #{$property}: process-values-rem($min);
+      #{$property}: convert-to-list-rem($min);
     }
   
     // Applying styles for the tablet
     @if $medium != null {
       @media screen and (min-width: shared.$screen-md) {
-        #{$property}: process-values-rem($medium);
+        #{$property}: convert-to-list-rem($medium);
       }
     }
   
     // Apply desktop styles
     @if $max != null {
       @media screen and (min-width: shared.$screen-xl) {
-        #{$property}: process-values-rem($max);
+        #{$property}: convert-to-list-rem($max);
       }
     }
   }
