improve file organisation, add new functions and mixins

--- a/src/styles/abstracts/mixins/adaptive/_mf-breakpoints-mixins.scss
+++ b/src/styles/abstracts/mixins/adaptive/_mf-breakpoints-mixins.scss
@@ -2,17 +2,8 @@
 @use "sass:list";
 @use "sass:meta";
 
-@use '@abstracts/variables/variables' as shared;
+@use '@abstracts/variables/variables' as *;
 @use '@scss-functions/utils/convert-to-list' as *;
-
-$breakpoints: (
-  xs : shared.$screen-xs,
-  sm : shared.$screen-sm,
-  md : shared.$screen-md,
-  lg : shared.$screen-lg,
-  xl : shared.$screen-xl,
-  xxl: shared.$screen-xxl
-);
 
 @mixin mf-bp($property, $values...) {
   // Check if map of values is passed
@@ -63,29 +54,6 @@ $breakpoints: (
       }
     }
   } 
-  
-  // @else {
-  //   // Backward compatibility with the old syntax
-  //   $min: if(list.length($values) >= 1, list.nth($values, 1), null);
-  //   $medium: if(list.length($values) >= 2, list.nth($values, 2), null);
-  //   $max: if(list.length($values) >= 3, list.nth($values, 3), null);
-
-  //   @if $min != null {
-  //     #{$property}: convert-to-list-rem($min);
-  //   }
-
-  //   @if $medium != null {
-  //     @media screen and (min-width: shared.$screen-md) {
-  //       #{$property}: convert-to-list-rem($medium);
-  //     }
-  //   }
-
-  //   @if $max != null {
-  //     @media screen and (min-width: shared.$screen-xl) {
-  //       #{$property}: convert-to-list-rem($max);
-  //     }
-  //   }
-  // }
 }
 
 //  concise syntax
