--- a/src/styles/abstracts/mixins/mixins.scss
+++ b/src/styles/abstracts/mixins/mixins.scss
@@ -1,3 +1,4 @@
 @forward 'adaptive/mf-breakpoints-mixins';
 @forward 'adaptive/mf-mtd-breakpoints-mixins';
-@forward 'adaptive/average-for-tablet-mixins';
+@forward 'adaptive/avg-tab';
+@forward 'adaptive/avg-bp-multi';
