--- a/src/styles/.INSTRUCTION.scss
+++ b/src/styles/.INSTRUCTION.scss
@@ -17,7 +17,7 @@
     &__breakpoints {
 
             // 1.1
-            // common use of adaptive value | list of breakpoints in mf-breakpoints-mixins.scss
+            // common use of adaptive value | list of breakpoints in screen-params
         @include mf-bp-rem('font-size', (
             xs: $font-size-html * 0.8,
             sm: $font-size-html * 0.9,
@@ -63,11 +63,11 @@
     }
 
     &__average {
-            // 3
+            // 1
             // you can calculate average value with this function
         font-size: avg(40px, 70px); // 55px
 
-            //3.1
+            //1.1
             // you can combine previous mentioned breakpoints mixins with this function
         @include mf-bp-rem('font-size', (
             xs: 40px,              // font-size: 2.5rem;
@@ -80,6 +80,31 @@
             md: (avg(60px, 112px) avg(5px, 10px)), // 86px 7.5px
             lg: 112px 10px,
         ));
+
+            // 2.1
+            // if you need to calculate average value using calc function between mobile and desktop 
+            // mobile = initial value
+            // tablet = $screen-md
+            // desktop = $screen-xl 
+
+        @include average-for-tablet('width', 117.43px, 175.39px);
+
+            // 2.2
+            //  if you need to calculate average value using calc function between many breakpoints and values
+        @include avg-bp-multi(right, 
+            79.69px, 'md', 'xl',
+            159.04px, 'xl', 'xxl',
+            277.04px, 'xxl', 'xxxl'
+        );
+            /*
+            it is equal:
+            default width: 79.69px;
+            min-width md: average calc between 79.69px and 159.04px
+            min-width xl: average calc between 159.04px and 277.04px
+            min-width xxl (fake-calculation): average calc between 277.04px and 277.04px - it's need for proper working
+            min-width xxxl: 277.04px
+            */
+         
     }
 
     &__colors {
@@ -93,6 +118,19 @@
             hex-to-rgba($color-main, 0)
         );
         
+    }
+
+    &__values-conversion {
+        // including above functions and mixins there a few more tools
+
+        // 1 
+        // px to rem conversion
+        padding: px-to-rem(12px, 1%, 1rem, 12px); // =>     padding: 0.75rem 1% 1rem 0.75rem;
+
+        // 2
+        // px to percents conversion
+        // second argument - screen size
+        width: px-to-percents(400px, 800px); // => 50%
     }
 
     
