improve file organization

--- a/src/styles/components/_root/TheFooter.scss
+++ b/src/styles/components/_root/TheFooter.scss
@@ -1,5 +1,5 @@
 @use '@styles/global' as *;
-@use '@scss-components/copyrights';
+@use '@scss-blocks/copyrights';
 
 .footer {
     background-color: $color-main;
