--- a/src/styles/components/_root/TheHeader.scss
+++ b/src/styles/components/_root/TheHeader.scss
@@ -1,5 +1,5 @@
 @use '@styles/global' as *;
-@use '@scss-components/copyrights';
+@use '@scss-blocks/copyrights';
 
 .header {
     background-color: $color-main;
