--- a/src/styles/abstracts/variables/_animation-params.scss
+++ b/src/styles/abstracts/variables/_animation-params.scss
@@ -2,3 +2,5 @@
 $animation-duration: 0.3s;
 $animation: ease-in-out;
 $animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
+
+$opacity-hover: 0.8;
