--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -240,6 +240,10 @@ html {
     }
   }
 
+html {
+    scroll-padding-top: 5%;
+}  
+
 //fix "jumping" content when the scrollbar appears or is hidden.
 //html,
 //body {
