--- a/src/styles/abstracts/variables/_screen-params.scss
+++ b/src/styles/abstracts/variables/_screen-params.scss
@@ -1,10 +1,12 @@
+@use '@scss-functions/values/px-to-rem' as *;
+
 // screen sizes
-$screen-xs : 0;
-$screen-sm : 480px;
-$screen-md : 768px;
-$screen-lg : 992px;
-$screen-xl : 1200px;
-$screen-xxl: 1600px;
+$screen-xs : px-to-rem(0px);
+$screen-sm : px-to-rem(480px);
+$screen-md : px-to-rem(768px);
+$screen-lg : px-to-rem(992px);
+$screen-xl : px-to-rem(1200px);
+$screen-xxl: px-to-rem(1600px);
 
 $breakpoints: (
   xs : $screen-xs,
