--- a/src/styles/abstracts/mixins/mixins.scss
+++ b/src/styles/abstracts/mixins/mixins.scss
@@ -2,3 +2,8 @@
 @forward 'adaptive/mf-mtd-breakpoints-mixins';
 @forward 'adaptive/avg-tab';
 @forward 'adaptive/avg-bp-multi';
+
+@forward 'property/hover-opacity';
+@forward 'property/link-under';
+@forward 'property/icon';
+@forward 'property/wrapper-container';
