--- a/src/styles/abstracts/mixins/property/hover-opacity.scss
+++ b/src/styles/abstracts/mixins/property/hover-opacity.scss
@@ -1,6 +1,6 @@
 @use '@abstracts/variables/variables' as *;
 
-@mixin hover {
+@mixin hover-opacity {
     transition: opacity $animation-duration $animation;
 
     &:hover {
