--- a/src/components/TheFooter.html
+++ b/src/components/TheFooter.html
@@ -1,3 +1,5 @@
-<load src="src/components/ui/_copyrights.html" 
-class="footer"
-/>
+<div class="footer__container">
+  <div class="footer__text-container">
+    <h3 class="footer-text">all rights reserved</h3>
+  </div>
+</div>
