--- a/src/components/TheHeader.html
+++ b/src/components/TheHeader.html
@@ -1,3 +1,9 @@
-<load src="src/components/blocks/_nav.html"
-class="header" 
-/>
+<div class="header__container">
+  <load src="src/components/ui/_copyrights.html"
+  class="header"
+  />
+
+  <load src="src/components/blocks/_nav.html"
+  class="header"
+  />
+</div>
