--- a/src/styles/abstracts/mixins/mixins.scss
+++ b/src/styles/abstracts/mixins/mixins.scss
@@ -3,7 +3,5 @@
 @forward 'adaptive/avg-tab';
 @forward 'adaptive/avg-bp-multi';
 
-@forward 'property/hover-opacity';
-@forward 'property/link-under';
-@forward 'property/icon';
-@forward 'property/wrapper-container';
+@forward 'property/event-opacity';
+@forward 'property/bottom-line';
