--- a/src/styles/abstracts/mixins/property/bottom-line.scss
+++ b/src/styles/abstracts/mixins/property/bottom-line.scss
@@ -1,12 +1,12 @@
 @use '@abstracts/variables/variables' as *;
 
-@mixin link-under {
+@mixin bottom-line {
     border-bottom: 1px solid transparent;
     padding-bottom: 1px;
 
     transition: border-color $animation-duration $animation;
 
     &:hover {
-        border-bottom: 1px solid $color-main;
+        border-bottom: 1px solid $color-primary;
     }
 }
