--- a/src/components/ui/_copyrights.html
+++ b/src/components/ui/_copyrights.html
@@ -1,5 +1,5 @@
 <div class="{=$class}__copyrights copyrights">
-    <a href="https://github.com/ATaimasov" target="_blank" class="logo copyrights__logo {=$class}__logo-link link">
-        <load src="src/assets/svg/copyrights.svg" class="{=$class}-copyrights__icon"/>
+    <a href="https://github.com/ATaimasov" target="_blank" class="link copyrights__link">
+      <img src="src/assets/svg/copyrights.svg" alt="" class="logo copyrights__logo">
     </a>
 </div>
