--- a/src/styles/abstracts/functions/values/_avg.scss
+++ b/src/styles/abstracts/functions/values/_avg.scss
@@ -1,10 +1,12 @@
 @use "sass:math";
 @use "@scss-functions/utils/strip-unit" as *;
 
+
+// average value between two values
 @function avg($value1, $value2) {
   $unit1: math.unit($value1);
   $unit2: math.unit($value2);
-  
+
   @if $unit1 == $unit2 {
     $avg: math.div($value1 + $value2, 2);
     @return $avg;
