--- a/src/styles/abstracts/functions/values/_percents.scss
+++ b/src/styles/abstracts/functions/values/_percents.scss
@@ -1,6 +1,7 @@
 @use "sass:math";
 @use '@abstracts/variables/screen-params' as *;
 
-@function px-to-percents($pxValue: 16px, $desktop-size: $screen-xl) {
+// px to percents
+@function percents($pxValue: 16px, $desktop-size: $screen-xl) {
     @return math.div($pxValue, $desktop-size) * 100%;
 }
