--- a/src/styles/abstracts/variables/_colors-params.scss
+++ b/src/styles/abstracts/variables/_colors-params.scss
@@ -1,10 +1,5 @@
-// colors
-$color-main:      #01579B; // primary colour
-$color-secondary: #FFEB3B; // complementary colour
-$color-danger:    #D41131; // the colour of a mistake, a dangerous act
-$color-success:   #3FD411; // confirmation colour, successful completion of the operation
-$color-warning:   #D8AE1C; // information message colour
-
-$color-link       : $color-secondary;
-$color-link-active: $color-main;
-$color-link-hover : $color-main;
+$color-primary-1: #427fa2;
+$color-primary-2: #7ab7d9;
+$color-danger   : #d41131;
+$color-success  : #3fd411;
+$color-warning  : #d8ae1c;
