--- a/src/styles/base/_animation.scss
+++ b/src/styles/base/_animation.scss
@@ -1,42 +1,36 @@
-@keyframes reveal-left {
+.smooth-mesh-background {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      135deg,
+      #7AB7D9 0%,
+      #6AAAC8 20%,
+      #5A9CB7 40%,
+      #4A8EA6 60%,
+      #3A8095 80%,
+      #2A7284 100%
+    );
+    background-size: 400% 400%;
+    animation: gradientShift 25s ease infinite;
+  }
+}
+
+@keyframes gradientShift {
   0% {
-    clip-path: inset(0 100% 0 0);
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
   }
   100% {
-    clip-path: inset(0 0 0 0);
+    background-position: 0% 50%;
   }
 }
-
-.reveal-right {
-animation: reveal-right 1s cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-@keyframes reveal-right {
-  0% {
-    clip-path: inset(0 0 0 100%);
-  }
-  100% {
-    clip-path: inset(0 0 0 0);
-  }
-}
-
-.reveal-left {
-animation: reveal-left 1s cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.fade-in {
-animation: fade-in-loading 1s linear;
-}  
-
-
-
-
