--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,7 +1,8 @@
-@use '@styles/global' as *;
+@forward '@styles/global';
 @use '@base/root' as *;
 
 // components for all pages
 @use '@scss-ui/copyrights';
 
-
+// styles for scripts and animations
+@use '@base/state';
