--- a/src/styles/abstracts/variables/_colors-params.scss
+++ b/src/styles/abstracts/variables/_colors-params.scss
@@ -1,5 +1,6 @@
-$color-primary-1: #427fa2;
-$color-primary-2: #7ab7d9;
-$color-danger   : #d41131;
-$color-success  : #3fd411;
-$color-warning  : #d8ae1c;
+$color-primary: #427fa2;
+$color-text-primary: #ffffff;
+
+// $color-danger   : #d41131;
+// $color-success  : #3fd411;
+// $color-warning  : #d8ae1c;
