--- a/src/components/TheFooter.html
+++ b/src/components/TheFooter.html
@@ -1,5 +1,5 @@
 <div class="footer__container">
   <div class="footer__text-container">
-    <h3 class="footer-text">all rights reserved</h3>
+    <p class="footer__text">all rights reserved</p>
   </div>
 </div>
