--- a/src/styles/base/_state.scss
+++ b/src/styles/base/_state.scss
@@ -1,5 +1,3 @@
-// for scripts
-
 .hidden {
     display: none;
 }
@@ -14,4 +12,29 @@
 
 .no-wrap {
     white-space: nowrap;
+}
+
+.smooth-mesh-background {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      135deg,
+      #7AB7D9 0%,
+      #6AAAC8 20%,
+      #5A9CB7 40%,
+      #4A8EA6 60%,
+      #3A8095 80%,
+      #2A7284 100%
+    );
+    background-size: 400% 400%;
+    animation: gradientShift 25s ease infinite;
+  }
 }
