--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,4 @@
 // global styles
-@forward '@abstracts/variables/variables';
-@forward '@abstracts/mixins/mixins';
-@forward '@abstracts/functions/functions';
-
+@forward "@abstracts/variables/variables";
+@forward "@abstracts/mixins/mixins";
+@forward "@abstracts/functions/functions";
