--- a/src/styles/abstracts/mixins/property/bottom-line.scss
+++ b/src/styles/abstracts/mixins/property/bottom-line.scss
@@ -1,12 +1,11 @@
-@use '@abstracts/variables/variables' as *;
+@use "@abstracts/variables/variables" as *;
 
 @mixin bottom-line {
-    border-bottom: 1px solid transparent;
-    padding-bottom: 1px;
+  padding-bottom: 1px;
+  border-bottom: 1px solid transparent;
+  transition: border-color $animation-duration $animation;
 
-    transition: border-color $animation-duration $animation;
-
-    &:hover {
-        border-bottom: 1px solid $color-primary;
-    }
+  &:hover {
+    border-bottom: 1px solid $color-primary;
+  }
 }
