--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,8 +1,8 @@
-@forward '@styles/global';
-@use '@base/root' as *;
+@forward "@styles/global";
+@use "@base/root" as *;
 
 // components for all pages
-@use '@scss-ui/copyrights';
+@use "@scss-ui/copyrights";
 
 // styles for scripts and animations
-@use '@base/state';
+@use "@base/state";
