--- a/src/styles/abstracts/mixins/property/event-opacity.scss
+++ b/src/styles/abstracts/mixins/property/event-opacity.scss
@@ -1,10 +1,10 @@
-@use '@abstracts/variables/variables' as *;
+@use "@abstracts/variables/variables" as *;
 
 @mixin event-opacity {
-    transition: opacity $animation-duration $animation;
+  transition: opacity $animation-duration $animation;
 
-    &:is(:focus-visible, :hover) {
-      outline: none;
-      opacity: $opacity;
-    }
+  &:is(:focus-visible, :hover) {
+    outline: none;
+    opacity: $opacity;
+  }
 }
