--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -79,11 +79,11 @@ u,
 ul,
 var,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 button,
@@ -91,77 +91,77 @@ html,
 input,
 select,
 textarea {
-    color: #222;
-    font-size: 100%;
-    vertical-align: baseline
+  color: #222;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 
 button,
 input,
 select {
-    line-height: normal;
-    text-transform: none
+  line-height: normal;
+  text-transform: none;
 }
 
 button,
 input,
 textarea,
 select {
-    font-family: inherit;
+  font-family: inherit;
 }
 
 button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
-    -webkit-appearance: button;
-    cursor: pointer
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
 }
 
 button[disabled],
 html input[disabled] {
-    cursor: default
+  cursor: default;
 }
 
-input[type=checkbox],
-input[type=radio] {
-    padding: 0
+input[type="checkbox"],
+input[type="radio"] {
+  padding: 0;
 }
 
 // removes default input search styles in different browsers
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration,
-input[type=search]::-webkit-search-results-button,
-input[type=search]::-webkit-search-results-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration,
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
-input[type=search] {
-    -webkit-appearance: textfield;
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
-input[type='number'] {
-    -moz-appearance:textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 body {
-    line-height: 1
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none
+  quotes: none;
 }
 
 // removes pseudo elements that browsers add by default.
@@ -169,8 +169,8 @@ blockquote:after,
 blockquote:before,
 q:after,
 q:before {
-    content: '';
-    content: none
+  content: "";
+  content: none;
 }
 
 // this semantic tags default style is inline
@@ -185,46 +185,48 @@ hgroup,
 menu,
 nav,
 section {
-    display: block
+  display: block;
 }
 
 audio,
 canvas,
 video {
-    display: inline-block;
-    max-width: 100%
+  display: inline-block;
+  max-width: 100%;
 }
 
 audio:not([controls]) {
-    display: none;
-    height: 0
+  display: none;
+  height: 0;
 }
 
 legend {
-    white-space: normal
+  white-space: normal;
 }
 
 textarea {
-    resize: vertical;
-    overflow: auto;
-    vertical-align: top;
-    resize: vertical
+  resize: vertical;
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 // all elements inherit box-sizing from the root element,
 // but if you need to change it, just return box-sizing: content-box;
 // on some selector and all its descendants will inherit this property.
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*, *::before, *::after {
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 // need alternatives if you want to disable outline on focus
@@ -234,4 +236,3 @@ html {
 // a:hover {
 //     outline: transparent;
 // }
-
