--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -1,11 +1,11 @@
 // abstracts
-@use '@styles/global' as *;
+@use "@styles/global" as *;
 @use "sass:color";
 
 // root styles
-@use '@base/fonts';
-@use '@base/reset';
-@use '@base/animation';
+@use "@base/fonts";
+@use "@base/reset";
+@use "@base/animation";
 
 //fix "jumping" content when the scrollbar appears or is hidden.
 // .html, .body {
@@ -13,18 +13,19 @@
 // }
 
 .html {
-    font-family: 'Roboto', 'Open Sans', Arial, sans-serif;
-    font-style : normal;
-    line-height: 1.2em;
-    color: $color-text-primary;
-    scrollbar-color: hex-to-rgba($color-primary, 0.9) color.adjust(white, $lightness: -10%);
-    scrollbar-width: thin;
-    scroll-padding-top: 5%;
+  font-family: "Roboto", "Open Sans", Arial, sans-serif;
+  font-style: normal;
+  line-height: 1.2em;
+  color: $color-text-primary;
+  scrollbar-color: hex-to-rgba($color-primary, 0.9)
+    color.adjust(white, $lightness: -10%);
+  scrollbar-width: thin;
+  scroll-padding-top: 5%;
 
-    /* exception for non smooth scrolling settings */
-    @media (prefers-reduced-motion: no-preference) {
-      scroll-behavior: smooth;
-    }
+  /* exception for non smooth scrolling settings */
+  @media (prefers-reduced-motion: no-preference) {
+    scroll-behavior: smooth;
+  }
 }
 
 ::selection {
@@ -100,19 +101,19 @@
 }
 
 .img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .logo {
-    line-height: 0;
-    user-select: none;
+  line-height: 0;
+  user-select: none;
 }
 
 .link {
-    text-decoration: none;
-    cursor: pointer;
-    @include event-opacity;
+  text-decoration: none;
+  cursor: pointer;
+  @include event-opacity;
 }
 
 .btn {
@@ -122,12 +123,6 @@
 }
 
 .icon {
-    fill      : currentColor;
-    transition: fill $animation-duration $animation;
+  fill: currentColor;
+  transition: fill $animation-duration $animation;
 }
-
-
-
-
-
-
