--- a/src/styles/components/test.scss
+++ b/src/styles/components/test.scss
@@ -1,4 +1,4 @@
-@use '@styles/global' as *;
+@use "@styles/global" as *;
 
 .test {
   &__title {
@@ -16,4 +16,3 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-
