--- a/src/styles/abstracts/functions/functions.scss
+++ b/src/styles/abstracts/functions/functions.scss
@@ -1,6 +1,2 @@
-@forward "values/rem";
-@forward "values/avg";
-@forward "values/percents";
-
-@forward "colors/hex-to-rgb";
-@forward "colors/hex-to-rgba";
+@forward 'values/rem';
+@forward 'values/avg';
