--- a/src/styles/abstracts/variables/_font-params.scss
+++ b/src/styles/abstracts/variables/_font-params.scss
@@ -1,5 +1,10 @@
-// font-sizes
-$font-size-html: 16px;
-$font-size-h1: 3rem;
-$font-size-h2: 2rem;
-$font-size-h3: 1.5rem;
+@use '@scss-functions/values/rem' as *;
+
+$font-size: 16px;
+$font-size--h1: rem(48px);
+$font-size--h2: rem(32px);
+$font-size--h3: rem(24px);
+
+$line-height: 1.2em;
+
+$font-family: 'Roboto', 'Open Sans', Arial, sans-serif;
