--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -1,11 +1,11 @@
 // abstracts
-@use "@styles/global" as *;
-@use "sass:color";
+@use '@styles/global' as *;
+@use 'sass:color';
 
 // root styles
-@use "@base/fonts";
-@use "@base/reset";
-@use "@base/animation";
+@use '@base/fonts';
+@use '@base/reset';
+@use '@base/animation';
 
 //fix "jumping" content when the scrollbar appears or is hidden.
 // .html, .body {
@@ -13,14 +13,13 @@
 // }
 
 .html {
-  font-family: "Roboto", "Open Sans", Arial, sans-serif;
-  font-style: normal;
-  line-height: 1.2em;
-  color: $color-text-primary;
-  scrollbar-color: hex-to-rgba($color-primary, 0.9)
-    color.adjust(white, $lightness: -10%);
+  font-family: $font-family;
+  line-height: $line-height;
+  color: $text-color;
+  scrollbar-color: hex-to-rgba($color-main, 0.9) color.adjust(white, $lightness: -10%);
   scrollbar-width: thin;
   scroll-padding-top: 5%;
+  // appearance: none;
 
   /* exception for non smooth scrolling settings */
   @media (prefers-reduced-motion: no-preference) {
@@ -29,9 +28,9 @@
 }
 
 ::selection {
-  background: color.adjust($color-primary, $lightness: -20%);
+  background: color.adjust($color-main, $lightness: -20%);
   text-shadow: none;
-  color: $color-text-primary;
+  color: $text-color;
 }
 
 // grid 3 rows
@@ -78,19 +77,20 @@
 
 .footer {
   justify-content: center;
+}
 
-  //! delete or change
-  &__text-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: rem(5px);
-  }
+//! delete or change
+.footer__text-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: rem(5px);
+}
 
-  &__text {
-    font-size: rem(13px);
-    line-height: 1.3em;
-  }
+//! delete or change
+.footer__text {
+  font-size: rem(13px);
+  line-height: 1.3em;
 }
 
 .main {
@@ -99,27 +99,27 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+}
 
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.main__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    //! delete or change
-    padding-top: rem(5px);
-    padding-bottom: rem(5px);
-    padding-right: rem(10px);
-    padding-left: rem(10px);
-    row-gap: rem(20px);
-    max-width: 80%;
+  //! delete or change
+  padding-top: rem(5px);
+  padding-bottom: rem(5px);
+  padding-right: rem(10px);
+  padding-left: rem(10px);
+  row-gap: rem(20px);
+  max-width: 80%;
 
-    @media screen and (min-width: $screen-md) {
-      padding-top: rem(15px);
-      padding-bottom: rem(15px);
-      padding-right: rem(30px);
-      padding-left: rem(30px);
-      row-gap: rem(30px);
-    }
+  @media screen and (min-width: $screen-md) {
+    padding-top: rem(15px);
+    padding-bottom: rem(15px);
+    padding-right: rem(30px);
+    padding-left: rem(30px);
+    row-gap: rem(30px);
   }
 }
 
@@ -130,18 +130,26 @@
 
 .logo {
   line-height: 0;
+  color: inherit;
   user-select: none;
 }
 
 .link {
   text-decoration: none;
   cursor: pointer;
+
+  //! delete or change
+  color: $text-color;
   @include event-opacity;
 }
 
 .btn {
   user-select: none;
   cursor: pointer;
+
+  //! delete or change
+  color: $text-color;
+  border: none;
   @include event-opacity;
 }
 
