--- a/src/styles/components/test.scss
+++ b/src/styles/components/test.scss
@@ -1,26 +1,24 @@
-@use "@styles/global" as *;
+@use '@styles/global' as *;
 
-.test {
-  &__title {
+.test__title {
+  font-size: rem(20px);
+
+  @media screen and (min-width: $screen-md) {
+    font-size: rem(30px);
+  }
+}
+
+.test__text {
+  font-size: rem(15px);
+  line-height: 1.3em;
+  text-align: justify;
+
+  @media screen and (min-width: $screen-md) {
     font-size: rem(20px);
-
-    @media screen and (min-width: $screen-md) {
-      font-size: rem(30px);
-    }
   }
+}
 
-  &__text {
-    font-size: rem(15px);
-    line-height: 1.3em;
-    text-align: justify;
-
-    @media screen and (min-width: $screen-md) {
-      font-size: rem(20px);
-    }
-  }
-
-  &__images {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
+.test__images {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
