--- a/src/components/TheHeader.html
+++ b/src/components/TheHeader.html
@@ -1,5 +1,4 @@
 <div class="header__container">
-  <load src="src/components/UI/_copyrights.html" class="header" />
-
-  <load src="src/components/blocks/_nav.html" class="header" />
+  <load src="./UI/_copyrights.html" class="header" />
+  <load src="./blocks/_nav.html" class="header" />
 </div>
